--- a/css/index.html
+++ b/css/index.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 
 <link rel="icon" href="icon1.png" type="image/x-icon">
-<link rel="Stylesheet" href="styles.css" type="text/css">
+<link rel="Stylesheet" href="index.css" type="text/css">
 <h1 style="color:white; text-align:center;"> Trending Courses in IT Sector</h1>
 <body>
 <p>
